; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/drivers/ip/network/extr_loopback.c_LoopUnregisterAdapter.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/drivers/ip/network/extr_loopback.c_LoopUnregisterAdapter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MID_TRACE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"Called.\0A\00", align 1
@Loopback = common dso_local global i32* null, align 8
@MAX_TRACE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [10 x i8] c"Leaving.\0A\00", align 1
@NDIS_STATUS_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LoopUnregisterAdapter(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @MID_TRACE, align 4
  %4 = call i32 @TI_DbgPrint(i32 %3, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %5 = load i32*, i32** @Loopback, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load i32*, i32** @Loopback, align 8
  %9 = call i32 @IPUnregisterInterface(i32* %8)
  %10 = load i32*, i32** @Loopback, align 8
  %11 = call i32 @IPDestroyInterface(i32* %10)
  store i32* null, i32** @Loopback, align 8
  br label %12

12:                                               ; preds = %7, %1
  %13 = load i32, i32* @MAX_TRACE, align 4
  %14 = call i32 @TI_DbgPrint(i32 %13, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  %15 = load i32, i32* @NDIS_STATUS_SUCCESS, align 4
  ret i32 %15
}

declare dso_local i32 @TI_DbgPrint(i32, i8*) #1

declare dso_local i32 @IPUnregisterInterface(i32*) #1

declare dso_local i32 @IPDestroyInterface(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
